prodMetadata/src/objects/PRec_Leg_junction__c.object
<CustomObject>
    <description>Junction object to establish many-to-many relationship between Policy Recommendations and Legislation (bills).</description>
    <fields>
        <fullName>Legislation__c</fullName>
        <label>Related Legislation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Legislation__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Legislation__c</referenceTo>
        <relationshipLabel>Recommendations related to this Leg</relationshipLabel>
        <relationshipName>PolRec_covered_by_Legislation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Issue__c</fullName>
        <formula>HYPERLINK( &quot;/&quot; &amp; Policy_Rec__r.Meta_Focus_Area__r.Id , Policy_Rec__r.Meta_Focus_Area__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Issue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Rec__c</fullName>
        <label>Related Policy Recommendation</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Policy_Rec__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Policy_Rec__c</referenceTo>
        <relationshipLabel>Legislation related to this Recommendation</relationshipLabel>
        <relationshipName>PolRec_covered_in_Leg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>P-Rec/Leg relationship</label>
    <nameField>
        <displayFormat>PR-Leg-{000000}</displayFormat>
        <label>PolRec-Leg ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>P-Rec/Leg relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>